--- a/src/pagesAdmin/Workers/WorkerPage/ConfirmModal/ConfirmModal.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/ConfirmModal/ConfirmModal.module.scss
@@ -1,11 +1,10 @@
-/* ConfirmModal.module.scss */
 .modalOverlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Чёрный полупрозрачный фон */
+    background-color: rgba(0, 0, 0, 0.6); /* Чёрный полупрозрачный фон основного окна */
     z-index: 1000; /* Выше всех остальных элементов */
     display: flex;
     align-items: center;
@@ -13,7 +12,7 @@
   }
   
   .modalContent {
-    background-color: rgb(0, 0, 0); /* чёрный фон контента */
+    background-color: var(--additional-background-color); /* фон контента */
     padding: 20px;
     border-radius: 8px;
   }
