--- a/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -1,29 +1,28 @@
-.modalContainer {
-  display: flex;
-  align-items: center;
-  border-radius: 16px;
-  justify-content: center;
+.modalOverlay {
   position: fixed;
-  border-radius: 16px;
-  top: 10%; /* Отступ сверху на 10% от высоты экрана */
-  left: 10%; /* Отступ слева на 10% от ширины экрана */
-  width: 80%; /* Ширина окна 80% от ширины экрана */
-  height: 80%; /* Высота окна 80% от высоты экрана */
-  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
-  background-color: var(--additional-background-color);
-  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: flex;
+  z-index: 1000; /* Выше всех остальных элементов */
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Чёрный полупрозрачный фон основного окна */
 }
 
 .modalContent {
+  position: relative;
   display: flex;
   flex-direction: column;
-  padding: 28px 32px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%; /* Ширина контента 100% от родительского контейнера */
-  height: 100%; /* Высота контента 100% от родительского контейнера */
   align-items: center;
-  position: relative;
+  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
+  width: 80%; /* Ширина контента 100% от родительского контейнера */
+  height: 80%; /* Высота контента 100% от родительского контейнера */
+  padding: 28px 32px;
+  border-radius: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--additional-background-color); /* фон контента */
 }
 
 .closeButton {
