--- a/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
@@ -1,5 +1,17 @@
 @import "../../../styles/fonts";
 
+.modalOverlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
 .workersModal {
   display: flex;
   padding-left: 20px;
@@ -21,6 +33,18 @@
 }
 .workersModal__content{
   visibility: inherit;
+}
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 .title{
       h3{
