--- a/src/pagesWorker/MyPage/MyPage.module.scss
+++ b/src/pagesWorker/MyPage/MyPage.module.scss
@@ -1,4 +1,5 @@
 .workerPage {
+  max-width: 1400px;  //НЕ РАБОТАЕТ!!!!!
   display: flex;
   flex-direction: row;
   margin-left: 40px;
@@ -13,6 +14,7 @@
 .workerInitial {
   display: flex;
   flex-direction: row;
+  margin-bottom: 64px;
 }
 .workerBtnMenu {
   ul {
