--- a/src/pagesAdmin/AchievementsConstructor/ModalConfirmDelete.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/ModalConfirmDelete.module.scss
@@ -15,27 +15,32 @@
   background-color: var(--additional-background-color); /* фон контента */
   padding: 20px;
   border-radius: 8px;
-}
 
-.buttonGroup {
-  display: flex;
-  justify-content: space-between;
-}
+  p {
+    margin-top: 5px;
+    margin-bottom: 30px;
+  }
 
-.confirmButton {
-  background-color: red; /* Красный фон кнопки удаления */
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+  .buttonGroup {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.cancelButton {
-  background-color: blue; /* Синий фон кнопки отмены */
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
+  .confirmButton {
+    background-color: red; /* Красный фон кнопки удаления */
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .cancelButton {
+    background-color: blue; /* Синий фон кнопки отмены */
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 }
