--- a/src/styles/configcss.scss
+++ b/src/styles/configcss.scss
@@ -1,5 +1,5 @@
 
-$main-background-color: linear-gradient(180.00deg, rgb(65, 61, 61),rgba(76, 10, 139, 0.98) 100%);
+$main-background-color: linear-gradient(160deg, rgba(26, 0, 50, 1) 0%, rgba(54, 12, 94, 1) 99%); //ОБЩИЙ ГРАДИЕНТ
 $color-light: #f4f4f4;
 
 $color-error: red;
