--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -9,7 +9,10 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background: linear-gradient(160deg, rgba(26, 0, 50, 1) 0%, rgba(54, 12, 94, 1) 99%); //ОБЩИЙ ГРАДИЕНТ
-  --additional-background-color: rgba(67, 16, 118, 1);  //фон для дополнительных элементов
+  --additional-background-color: rgba(67, 16, 118, 1);  //фон1 для дополнительных элементов
+  --additional-2-background-color: rgb(35, 8, 61);;  //фон2 для дополнительных элементов
+  
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
