--- a/src/pagesAdmin/AchievementsConstructor/ModalChooseBG.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/ModalChooseBG.module.scss
@@ -1,25 +1,25 @@
 .modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Выше всех остальных элементов */
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 514px;
-  height: 557px;
-  z-index: 1000;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Чёрный полупрозрачный фон основного окна */
 }
 
 .modalContent {
-  background: #2c2c2c;
-
-  border-radius: 8px;
-  width: 80%;
-  max-width: 800px;
-  max-height: 90%;
-  overflow: hidden;
   position: relative;
+  max-width: 800px;
+  max-height: 650px;
+  width: 557px; 
+  padding: 20px 32px;
+  border-radius: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--additional-2-background-color); /* фон контента */
 }
 
 .closeButton {
@@ -33,10 +33,13 @@
   color: white;
 }
 
-h2 {
-  text-align: center;
+.textTitle  {
   color: white;
   margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 8px;
 }
 
 .backgroundsGrid {
@@ -99,36 +102,43 @@ h2 {
 
   position: sticky; /* Закрепляем кнопки внизу */
   bottom: 0;
-  background: #2c2c2c; /* Фон для закрепленных кнопок */
   padding: 10px 0; /* Отступы для закрепленных кнопок */
 
   .cancelButton {
-    background: #ff4d4d;
+    margin-top: 20px;
+    background: #6A11C3;
     border: none;
     padding: 10px 20px;
     border-radius: 8px;
     cursor: pointer;
     color: white;
     font-size: 1rem;
-    transition: background 0.3s ease;
+    transition:
+      background-color 0.3s,
+      transform 0.3s;
 
     &:hover {
-      background: #ff1a1a;
+      opacity: 1;
+      transform: scale(1.05);
     }
   }
 
   .confirmButton {
-    background: #4caf50;
+    margin-top: 20px;
+    background: #AB57FF;
     border: none;
     padding: 10px 20px;
     border-radius: 8px;
     cursor: pointer;
     color: white;
     font-size: 1rem;
-    transition: background 0.3s ease;
+    transition:
+      background-color 0.3s,
+      transform 0.3s;
 
     &:hover {
-      background: #45a049;
+      opacity: 1;
+      transform: scale(1.05);
     }
   }
 }
