--- a/src/pagesAdmin/Workers/WorkerPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerRanks/WorkerRanks.module.scss
@@ -1,6 +1,7 @@
 .workerRanksMenu {
   display: flex;
   flex-direction: row;
+  flex-grow: 1;
   border: 1px solid white;
     border-radius: 20px;
     position: relative;
