--- a/src/pagesAdmin/Workers/WorkerPage/WokerPage.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WokerPage.module.scss
@@ -1,5 +1,5 @@
 .workerPage {
-  max-width: 1400px;
+  max-width: 1400px;  //НЕ РАБОТАЕТ!!!!!
   display: flex;
   flex-direction: row;
   margin-left: 40px;
