--- a/src/pagesWorker/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesWorker/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -83,8 +83,8 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  width: 210px;  
-  height: 274px;  //НАДО БОЛЬШЕ
+  width: 230px;   //старое 210px
+  height: 300px;  //старое 274px
   flex-direction: column;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -109,6 +109,7 @@
       width: 100%;
       height: 100%;
       background-image: var(--background-image);
+      background-size: 125%;
       background-repeat: no-repeat;
       background-position: center;
       z-index: 0;
