--- a/src/styles/configcss.scss
+++ b/src/styles/configcss.scss
@@ -1,5 +1,6 @@
 
 $main-background-color: linear-gradient(160deg, rgba(26, 0, 50, 1) 0%, rgba(54, 12, 94, 1) 99%); //ОБЩИЙ ГРАДИЕНТ
+$modal-background-color: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%); //ГРАДИЕНТ ДЛЯ МОДАЛОК
 $color-light: #f4f4f4;
 
 $color-error: red;
