--- a/src/pagesAdmin/AchievementsConstructor/ModalConfirmDelete.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/ModalConfirmDelete.module.scss
@@ -12,7 +12,7 @@
 }
 
 .modalContent {
-  background-color: var(--additional-background-color); /* фон контента */
+  background-color: var(--additional-1-background-color); /* фон контента */
   padding: 20px;
   border-radius: 8px;
 
@@ -26,21 +26,27 @@
     justify-content: space-between;
   }
 
+  .confirmButton, .cancelButton {
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition:
+    background-color 0.3s,
+    transform 0.3s;
+    img {
+      margin-right: 8px;
+    }
+    &:hover {
+      opacity: 1;
+      transform: scale(1.05);
+    }
+  }
   .confirmButton {
     background-color: red; /* Красный фон кнопки удаления */
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
   }
-
   .cancelButton {
     background-color: blue; /* Синий фон кнопки отмены */
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
   }
 }
