--- a/src/pagesAdmin/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesAdmin/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -1,28 +1,32 @@
-.modalContainer {
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
+  z-index: 1000; /* Выше всех остальных элементов */
   align-items: center;
   justify-content: center;
-  position: fixed;
-  border-radius: 16px;
-  top: 10%; /* Отступ сверху на 10% от высоты экрана */
-  left: 10%; /* Отступ слева на 10% от ширины экрана */
-  width: 80%; /* Ширина окна 80% от ширины экрана */
-  height: 80%; /* Высота окна 80% от высоты экрана */
-  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
-  background-color: var(--additional-background-color);
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Чёрный полупрозрачный фон основного окна */
 }
 
 .modalContent {
+  position: fixed;    //position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%; /* Ширина контента 100% от родительского контейнера */
-  height: 100%; /* Высота контента 100% от родительского контейнера */
   align-items: center;
-  position: relative;
+  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
+  width: 80%; /* Ширина контента от родительского контейнера */
+  height: 90%; /* Высота контента от родительского контейнера */
+  padding: 28px 32px;
+  border-radius: 16px;
+  background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);
+  box-sizing: border-box;
+//box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//backdrop-filter: blur(1px);
+//transition: transform 0.3s ease-out;
 }
 
 .closeButton {
@@ -35,12 +39,29 @@
   border: none;
   font-size: 20px;
   cursor: pointer;
-  color: white; /* Цвет кнопки */
+  color: rgba(244, 244, 244, 0.7);
 }
 
-h1 {
-  align-items: center;
-  justify-self: center;
+.titleContainer {
+  display: flex;
+
+  img {
+    margin-top: 18px;
+    width: 48px;
+    height: 40px;
+  }
+
+  h1 {
+    align-items: left;
+    justify-self: center;
+    font-family: "Open Sans";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: rgba(244, 244, 244, 1);
+  }
 }
 
 .searchInput {
@@ -50,25 +71,25 @@ h1 {
   padding-bottom: 24px;
 }
 
-
 .achievementsList {
+  margin-top: 10px;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
 
 .achieveCard {
+  margin-top: 5px;
+  position: relative;
+  overflow: hidden;
   border-radius: 20px;
   align-items: center;
   display: flex;
   justify-content: center;
-  width: 210px;
-  height: 274px;
+  width: 230px;   //старое 210px
+  height: 300px;  //старое 274px
   flex-direction: column;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition:
@@ -78,12 +99,27 @@ h1 {
   color: #fff;
   font-size: 1.25rem;
   cursor: pointer;
+  
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
-      &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-      }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: var(--background-image);
+      background-size: 123%;
+      background-repeat: no-repeat;
+      background-position: center;
+      z-index: 0;
+    }
 }
+
 .achieveButton {
   width: 210px;
   height: 274px;
@@ -101,7 +137,54 @@ h1 {
   text-align: center;
   color: inherit; /* наследует цвет у родителя */
 }
+
 .achieveImg {
-  width: 140px;
-  height: 140px;
+  width: 120px;
+  height: 120px;
+  margin-top: 12px;
+  z-index: 1;
+}
+
+
+.achieveContent {
+  padding: 1rem;
+  text-align: center;
+  z-index: 1;
+  width: 210px;
+  word-wrap: break-word; // Автоматический перенос текста
+
+  .achieveTitle {
+    margin: 10px 5px; 
+    color: rgb(244, 244, 244);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: center;
+  }
+
+  .achieveDescription {
+    margin: 10px 5px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: rgb(244, 244, 244);
+    opacity: 0.8;
+    overflow: hidden;
+    text-overflow: ellipsis; // Добавление троеточия в конце текста
+    display: -webkit-box;
+    -webkit-line-clamp: 2; // Ограничение текста до двух строк
+    -webkit-box-orient: vertical;
+  }
+
+  .achieveRank {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 20px 5px 10px;
+  }
 }
