--- a/src/pagesAdmin/MyPage/WorkerAchievements/WorkerAchievements.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerAchievements/WorkerAchievements.module.scss
@@ -1,39 +1,56 @@
 .workerAchievements {
   visibility: inherit;
+  h1{
+    font-size: 40px;
+    position: relative;
+    left: 20px;
+  }
 }
 
-
 .workerAchievementsNav {
-    ul {
-      display: flex;
-      flex-direction: row;
-      margin-top: 32px;
-      gap: 20px;
-      list-style: none;
+  ul {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    left: 20px;
+    margin-top: 32px;
+    gap: 20px;
+    list-style: none;
+
+    .giveAchieveButton {
+      visibility: inherit;
     }
+
+    .searchAchieveInput {
+      margin-top: 10px;
+    }
+  }
 }
 
 .workerAchievementsList {
-  height: 568px; /* ПРИМЕРНАЯ ВЫСОТА ИЗ МАКЕТА */
   overflow-y: auto; /* вертикальный скролл */
-  overflow-x: hidden; /* Скрыть горизонтальный скролл */
+  overflow-x: hidden; /* cкрыть горизонтальный скролл */
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Три столбца равной ширины */
-  gap: 20px; /* Расстояние между элементами */
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));  //старое minmax(210px,..));
+  // grid-template-columns: repeat(3, 1fr);  /* Три столбца равной ширины */
+  grid-gap: 30px;
+  width: 100%;
+  max-width: 780px;
+  height: 650px;
+  margin: 30px;
 }
 
-
 .achievementCard {
+  margin-top: 5px;
+  position: relative;
+  overflow: hidden;
   border-radius: 20px;
   align-items: center;
   display: flex;
   justify-content: center;
-  width: 210px;
-  height: 274px;
+  width: 230px;   //старое 210px
+  height: 300px;  //старое 274px
   flex-direction: column;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition:
@@ -43,47 +60,106 @@
   color: #fff;
   font-size: 1.25rem;
   cursor: pointer;
+  
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
-      &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-      }
-}
-.achieveButton {
-  width: 210px;
-  height: 274px;
-  background: none;
-  border: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: var(--background-image);
+      background-size: 123%;
+      background-repeat: no-repeat;
+      background-position: center;
+      z-index: 0;
+    }
 
-.achieveTitle {
-  margin-top: 10px; 
-  text-align: center; 
-}
-.achieveImg {
-  width: 140px;
-  height: 140px;
-}
+  .deleteButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(255, 0, 0, 0.8);
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: #fff;
+    font-size: 1.25rem;
+    z-index: 1;
 
-.removeButton {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: transparent;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-  padding: 5px;
-  color: white;
+    &:hover {
+      background: rgba(255, 0, 0, 1);
+    }
+  }
+
+  &:hover .deleteButton {
+    display: flex;
+  }
+
+  .achieveImg {
+    width: 120px;
+    height: 120px;
+    margin-top: 12px;
+    z-index: 1;
+  }
+
+  .achieveContent {
+    padding: 1rem;
+    text-align: center;
+    z-index: 1;
+    width: 210px;
+    word-wrap: break-word; // Автоматический перенос текста
+
+    .achieveTitle {
+      margin: 10px 5px; 
+      color: rgb(244, 244, 244);
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 18px;
+      letter-spacing: 0.01em;
+      text-align: center;
+    }
+
+    .achieveDescription {
+      margin: 10px 5px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      letter-spacing: 0.01em;
+      text-align: center;
+      color: rgb(244, 244, 244);
+      opacity: 0.8;
+      overflow: hidden;
+      text-overflow: ellipsis; // Добавление троеточия в конце текста
+      display: -webkit-box;
+      -webkit-line-clamp: 2; // Ограничение текста до двух строк
+      -webkit-box-orient: vertical;
+    }
+
+    .achieveRank {
+      display: flex;
+      justify-content: center;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 24px;
+      margin: 20px 5px 10px;
+    }
+  }
 }
 
 
 button {
-  position: relative; 
+  position: relative;
 
   &:focus {
     outline: none;
