--- a/src/pagesAdmin/MyPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerRanks/WorkerRanks.module.scss
@@ -1,8 +1,12 @@
 .workerRanksMenu {
   display: flex;
   flex-direction: row;
+  flex-grow: 1;
   border: 1px solid white;
     border-radius: 20px;
+    position: relative;
+    left: 20px;
+ 
 }
 
 .workerRanksTitle {
@@ -37,14 +41,11 @@
   }
   
 }
-
-.workerRanksInputWrapper {
-  position: relative;
-}
-
 .workerRanksUnit {
-  position:relative;
-  top: 140px;
+  position: relative;
+  top: 13px;
   font-size: 35px;
-  right: 43px;
+  right: 37px;
+  padding-right: 20px;
 }
+
