--- a/src/pagesWorker/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesWorker/MyPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -12,24 +12,28 @@
 }
 
 .modalContent {
-  position: relative;
+  position: fixed;    //position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
-  width: 80%; /* Ширина контента 100% от родительского контейнера */
-  height: 80%; /* Высота контента 100% от родительского контейнера */
+  width: 80%; /* Ширина контента от родительского контейнера */
+  height: 90%; /* Высота контента от родительского контейнера */
   padding: 28px 32px;
   border-radius: 16px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: var(--additional-2-background-color); /* фон контента */
+  background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);
+  box-sizing: border-box;
+//box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//backdrop-filter: blur(1px);
+//transition: transform 0.3s ease-out;
 }
+
 .closeButton {
-  position:sticky;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   display: flex;
   align-self:flex-end;
-  top: 15px;
-  
   background: none;
   border: none;
   font-size: 20px;
@@ -68,6 +72,7 @@
 
 
 .achievementsList {
+  overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
   margin-top: 10px;
   width: 100%;
   display: grid;
