--- a/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
@@ -5,6 +5,8 @@
   flex-direction: row;
   border: 1px solid white;
     border-radius: 20px;
+    max-width: 680px;
+    width: 100%;
 }
 
 .workerRanksTitle {
