--- a/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
@@ -14,7 +14,7 @@ button {
     font-size: 16px;
     color: white;
     padding-left: 40px;
-    width: 554px;
+    max-width: 554px;
     height: 40px;
     border: none;
     background: url("@/assets/search-icon.svg") no-repeat, none;
