--- a/src/Login/Login.module.scss
+++ b/src/Login/Login.module.scss
@@ -3,40 +3,56 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: rgba(244, 244, 244, 0.02);
   padding: 20px;
-
-  h2 {
-    margin-bottom: 20px;
+  
+  h1 {
+    margin-bottom: 10px;
+    margin-top: 5px;
+    max-width: 500px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 50px;
+    text-align: center;
   }
 
   .welcomeImg {
+    margin-top: 10px;
+    margin-bottom: 15px;
     width: 310px;
     height: 215px;
+  }
 
+  .welcomeLogin,
+  .welcomePassword {
+    margin-bottom: 20px;
+  }
+
+  .welcomeButtons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 10px;
   }
 
   div {
-    margin-bottom: 10px;
     width: 100%;
     max-width: 300px;
-    
+
     label {
       display: block;
       margin-bottom: 5px;
     }
 
-    .labelRole {
-      font-weight: bold;
-    }
 
     input[type="text"],
-    input[type="password"],
-    input[type="email"] {
+    input[type="password"] {
       width: 100%;
       padding: 8px;
       box-sizing: border-box;
-
+      border-radius: 10px;
+      
       &:hover {
         opacity: 1;
         transform: scale(1.05);
@@ -45,12 +61,6 @@
 
     .passwordContainer {
       position: relative;
-
-      input[type="password"],
-      input[type="text"] {
-        width: 100%;
-        padding-right: 30px; /* Space for the toggle icon */
-      }
 
       .passwordToggle {
         position: absolute;
@@ -62,35 +72,48 @@
     }
 
     .errorMessage {
-      color: red;  //не рабо
+      color: red;
       font-size: 12px;
       margin-top: 5px;
     }
-
-    div {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
   }
 
+
+
   button {
+    width: calc(50% - 15px);
     padding: 10px 20px;
     margin: 5px;
     cursor: pointer;
     border-radius: 16px;
+    color: white;
     text-decoration: none;
-    color: #fff;
-    opacity: 0.6;
     border: 0.5px solid #f4f4f410;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
-    margin-right: 16px;
-  
+    transition: transform 0.2s, opacity 0.2s;
+
     &:hover {
       opacity: 1;
       transform: scale(1.05);
+    }
+  }
+
+  .enterButton {
+    background: #ab57ff;
+  }
+  .cancelButton {
+    background: rgba(244, 244, 244, 0.2);
+  }
+  .registrationButtonContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 350px;
+  
+    .registrationButton {
+      background: #007bff;
     }
   }
 }
