--- a/src/Registration/Registration.module.scss
+++ b/src/Registration/Registration.module.scss
@@ -1,81 +1,97 @@
 .registrationContainer {
   max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
+  margin: 20px auto;
+  padding: 10px 20px;
+  background-color: rgba(67, 16, 118, 1);
+  border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
   h1 {
-    text-align: center;
     margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
+    color: white;
+    margin-top: 1px;
+    max-width: 500px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 50px;
+    text-align: center;
   }
 
   label {
     display: block;
     margin-bottom: 5px;
-    font-weight: bold;
-    color: #555;
+    //font-weight: bold;
+    color: white;
   }
 
   input,
   select {
     width: calc(100% - 20px);
     padding: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 14px;
     box-sizing: border-box;
-  }
-
-  button {
-    width: calc(50% - 10px);
-    padding: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: #0056b3;
-    }
-
-    &:last-child {
-      margin-right: 0;
-      background-color: #6c757d;
-
-      &:hover {
-        background-color: #5a6268;
-      }
+      opacity: 1;
+      transform: scale(1.05);
     }
   }
-
+ 
   .passwordContainer {
     position: relative;
-
-    input[type="password"],
-    input[type="text"] {
-      width: 100%;
-      padding-right: 30px; /* Space for the toggle icon */
-    }
-
+    
     .passwordToggle {
       position: absolute;
-      right: 8px;
-      top: 60%;
+      right: 30px;
+      top: 61%;
       transform: translateY(-50%);
       cursor: pointer;
     }
   }
 
+  .вuttonsGroup {
+    margin-top: 15px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
 
+    button {
+      width: calc(50% - 15px);
+      padding: 10px;
+      margin-right: 10px;
+      border: none;
+      border-radius: 16px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      transition: transform 0.2s, opacity 0.2s;
+
+      &:hover {
+        opacity: 1;
+        transform: scale(1.05);
+      }
+    }
+    .registrationButton {
+      background-color: #ab57ff;
+    }
+    .resetButton {
+      background-color: rgba(244, 244, 244, 0.2);
+    }
+    .cancelButtonContainer {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      .cancelButton  {
+        background-color: #007bff;
+      }
+    }
+  }
+  
   .errorMessage {
     color: red;
     font-size: 14px;
