--- a/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
@@ -82,7 +82,6 @@ h1 {
 .workerInformation {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 25px;
 }
 
 .workerInformation > div {
@@ -161,74 +160,81 @@ h1 {
 .workerLogin {
   visibility: inherit;
   input {
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerFirstName {
   visibility: inherit;
   input {
-    padding-left: 10px;
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerMiddleName {
   visibility: inherit;
   input {
-    padding-left: 10px;
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
+    text-align: center;
   }
 }
 .workerLastName {
   visibility: inherit;
   input {
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerBirthday {
   visibility: inherit;
   input {
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerNumber {
   visibility: inherit;
   input {
     background: none;
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerStartdate {
   visibility: inherit;
   input {
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
 .workerPosition {
   visibility: inherit;
   input {
-    width: 242px;
+    border: 1px solid white;
+    width: 150px;
     height: 60px;
     border-radius: 30px;
-    padding-left: 10px;
+    text-align: center;
   }
 }
