--- a/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
+++ b/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
@@ -33,8 +33,8 @@
 
 .workerAchievementsList {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
-  grid-gap: 1em;
+  // grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
+  grid-template-columns: 1fr 1fr;
   max-width: 780px;
   height: 650px;
   padding: 1rem;
