--- a/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
@@ -5,8 +5,7 @@
   flex-direction: row;
   border: 1px solid white;
     border-radius: 20px;
-    max-width: 680px;
-    width: 100%;
+    width: 600px;
 }
 
 .workerRanksTitle {
@@ -46,7 +45,7 @@
   position: relative;
   top: 13px;
   font-size: 35px;
-  right: 37px;
+  right: 33px;
   padding-right: 20px;
 }
 
