--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -12,7 +12,8 @@
   --modal-background-color: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);  //фон1 для дополнительных элементов
   --additional-1-background-color: rgba(67, 16, 118, 1);  //фон1 для дополнительных элементов 
   --additional-2-background-color: rgb(35, 8, 61);;  //фон2 для дополнительных элементов
-
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
 
   font-synthesis: none;
