--- a/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
@@ -82,6 +82,7 @@ h1 {
 .workerInformation {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
 }
 
 .workerInformation > div {
@@ -161,7 +162,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -171,7 +172,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -181,7 +182,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -191,7 +192,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -201,7 +202,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -212,7 +213,7 @@ h1 {
   input {
     background: none;
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -222,7 +223,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -232,7 +233,7 @@ h1 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
