--- a/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -87,6 +87,7 @@ h2 {
 .workerInformation {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
 }
 
 .workerInformation > div {
@@ -158,7 +159,7 @@ h2 {
 
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -168,7 +169,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -178,7 +179,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -188,7 +189,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -198,7 +199,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -209,7 +210,7 @@ h2 {
   input{
     background: none;
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -219,7 +220,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -229,7 +230,7 @@ h2 {
   visibility: inherit;
   input{
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
