--- a/src/pagesWorker/MyPage/MyPage.module.scss
+++ b/src/pagesWorker/MyPage/MyPage.module.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   margin-left: 40px;
   justify-content: space-around;
-  gap: 2%;
+  gap: 54px;
 }
 .workerSection {
   display: flex;
