--- a/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
+++ b/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
@@ -32,13 +32,14 @@
 }
 
 .workerAchievementsList {
+  overflow-y: auto;
+  overflow-x: hidden;
   display: grid;
-  // grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  width: 100%;
   max-width: 780px;
   height: 650px;
-  padding: 1rem;
-  gap: 10px;
+  margin: 30px;
   
 }
 
