--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -81,6 +81,7 @@ h2 {
 .workerInformation {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
 }
 
 .workerInformation > div {
@@ -159,7 +160,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -169,7 +170,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -179,7 +180,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -189,7 +190,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -199,7 +200,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -209,7 +210,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -219,7 +220,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
@@ -229,7 +230,7 @@ h2 {
   visibility: inherit;
   input {
     border: 1px solid white;
-    width: 150px;
+    width: 220px;
     height: 60px;
     border-radius: 30px;
     text-align: center;
